--- a/astronomy.csproj
+++ b/astronomy.csproj
@@ -14,8 +14,17 @@
     <NeutralLanguage>en-GB</NeutralLanguage>
     <Product>CoverControl</Product>
     <Title>CoverControl</Title>
-    <Version>0.2.0</Version>
+    <Version>1.0.0</Version>
+    <Platforms>AnyCPU;x86</Platforms>
   </PropertyGroup>
+  <ItemGroup>
+    <COMReference Include="{bee4bfec-6683-3e67-9167-3c0cbc68f40a}">
+      <WrapperTool>tlbimp</WrapperTool>
+      <VersionMinor>4</VersionMinor>
+      <VersionMajor>2</VersionMajor>
+      <Guid>bee4bfec-6683-3e67-9167-3c0cbc68f40a</Guid>
+    </COMReference>
+  </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Toolkit.Uwp.Notifications" Version="7.1.3" />
   </ItemGroup>
